--- a/index.html
+++ b/index.html
@@ -6,8 +6,20 @@
     <title>Portfolio of Tamim Iqbal</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
+    <header>
     
+    </header>
+
+    <main>
+
+    </main>
+
+    <footer>
+
+
+    </footer>
 </body>
 </html>
