--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
     </header>
 
     <main>
-        <section class="banner-container w-[300] p-1 rounded-xl mr-5 ml-5 lg:w-[1100px] lg:mx-auto my-16">
+        <!-- <section class="banner-container w-[300] p-1 rounded-xl mr-5 ml-5 lg:w-[1100px] lg:mx-auto my-16"> -->
+        <section class="banner-container shadow-md rounded-xl p-1 mx-5 my-16 mx-auto lg:w-10/12">
             <div class="ml-5 md:flex justify-center items-center mt-6 gap-10 pt-2">
                 <div>
                     <span class="text-2xl md:text-3xl font-semibold mb-0">Hi I am</span>
@@ -60,9 +61,11 @@
             </div>
         </section>
 
-        <section class="w-[300] my-16 bg-white py-12 lg:w-[1100px] lg:mx-auto shadow-md text-center rounded-2xl">
-           <h1 class=" text-4xl font-bold text-[#FFD700] mb-4">About Me</h1>
-            <P class=" text-sm md:text-lg font-light my-3 text-[#757575] ">Innovative Web Developer and Education Pioneer</P>
+        <!-- <section class="w-[300] my-16 bg-white py-12 lg:w-[1100px] lg:mx-auto shadow-md text-center rounded-2xl"> -->
+        <section class="text-center bg-white shadow-md rounded-2xl p-12 my-16 mx-auto w-10/12">
+            <h1 class=" text-4xl font-bold text-[#FFD700] mb-4">About Me</h1>
+            <P class=" text-sm md:text-lg font-light my-3 text-[#757575] ">Innovative Web Developer and Education
+                Pioneer</P>
             <P class="text-lg mx-auto my-4 w-2/3">I am a dedicated and skilled PHP and WordPress Web Developer with
                 over 4 years of hands-on experience in
                 creating dynamic and visually appealing websites. As the Founder & CEO of Instructorium and the Founder
@@ -76,27 +79,117 @@
                 comprehensive and efficient web development solutions.
             </P>
             <div class="flex gap-4 justify-center items-center mt-6">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor" style="cursor: pointer;">
-                    <path d="M22.676 0H1.324C.593 0 0 .593 0 1.324v21.352C0 23.407.593 24 1.324 24h11.495v-9.294h-3.128v-3.622h3.128V8.411c0-3.1 1.892-4.787 4.659-4.787 1.324 0 2.462.098 2.795.142v3.239h-1.917c-1.504 0-1.794.714-1.794 1.761v2.311h3.587l-.467 3.622h-3.12V24h6.117c.73 0 1.324-.593 1.324-1.324V1.324C24 .593 23.406 0 22.676 0z"/>
-                  </svg>
-                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor" style="cursor: pointer;">
-                    <path d="M12 2.163c3.204 0 3.584.012 4.85.07 1.366.062 2.633.315 3.608 1.29.975.975 1.228 2.242 1.29 3.608.058 1.266.07 1.646.07 4.85s-.012 3.584-.07 4.85c-.062 1.366-.315 2.633-1.29 3.608-.975.975-2.242 1.228-3.608 1.29-1.266.058-1.646.07-4.85.07s-3.584-.012-4.85-.07c-1.366-.062-2.633-.315-3.608-1.29-.975-.975-1.228-2.242-1.29-3.608C2.175 15.584 2.163 15.204 2.163 12s.012-3.584.07-4.85c.062-1.366.315-2.633 1.29-3.608.975-.975 2.242-1.228 3.608-1.29C8.416 2.175 8.796 2.163 12 2.163M12 0C8.741 0 8.332.015 7.052.072 5.771.13 4.732.308 3.867.877c-.865.568-1.548 1.252-2.116 2.116C.308 4.732.13 5.771.072 7.052.015 8.332 0 8.741 0 12s.015 3.668.072 4.948c.058 1.281.236 2.32.805 3.185.568.865 1.252 1.548 2.116 2.116.865.568 1.904.746 3.185.805C8.332 23.985 8.741 24 12 24s3.668-.015 4.948-.072c1.281-.058 2.32-.236 3.185-.805.865-.568 1.548-1.252 2.116-2.116.568-.865.746-1.904.805-3.185C23.985 15.668 24 15.259 24 12s-.015-3.668-.072-4.948c-.058-1.281-.236-2.32-.805-3.185-.568-.865-1.252-1.548-2.116-2.116-.865-.568-1.904-.746-3.185-.805C15.668.015 15.259 0 12 0zm0 5.838a6.163 6.163 0 1 0 0 12.326 6.163 6.163 0 0 0 0-12.326zm0 10.163a3.999 3.999 0 1 1 0-7.998 3.999 3.999 0 0 1 0 7.998zm7.755-10.601a1.44 1.44 0 1 1-2.88 0 1.44 1.44 0 0 1 2.88 0z"/>
-                  </svg>
-                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor" style="cursor: pointer;">
-                    <path d="M23.953 4.57a10.004 10.004 0 0 1-2.825.775 4.932 4.932 0 0 0 2.163-2.724 9.864 9.864 0 0 1-3.127 1.184 4.916 4.916 0 0 0-8.384 4.482 13.978 13.978 0 0 1-10.15-5.14 4.822 4.822 0 0 0-.664 2.475 4.92 4.92 0 0 0 2.188 4.1 4.903 4.903 0 0 1-2.228-.616v.06a4.927 4.927 0 0 0 3.946 4.829 4.952 4.952 0 0 1-2.224.085 4.931 4.931 0 0 0 4.604 3.417A9.867 9.867 0 0 1 1.187 20.28a13.957 13.957 0 0 0 7.548 2.212c9.142 0 14.307-7.721 14.307-14.422 0-.219-.005-.437-.014-.654A10.243 10.243 0 0 0 24 4.59a9.937 9.937 0 0 1-2.847.782 4.92 4.92 0 0 0 2.163-2.724z"/>
-                  </svg>
-                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor" style="cursor: pointer;">
-                    <path d="M19.667 3H4.333C3.6 3 3 3.6 3 4.333v15.334C3 20.4 3.6 21 4.333 21h15.334C20.4 21 21 20.4 21 19.667V4.333C21 3.6 20.4 3 19.667 3zM8.5 18.5H6V9.75h2.5v8.75zm-1.25-10.042c-.802 0-1.458-.656-1.458-1.458 0-.802.656-1.458 1.458-1.458.802 0 1.458.656 1.458 1.458 0 .802-.656 1.458-1.458 1.458zM18.5 18.5h-2.5v-4.167c0-1.11-.945-2.042-2.042-2.042H12v6.25H9.5V9.75H12v1.042c.625-.9 2.012-1.875 3.333-1.875 2.25 0 3.167 1.708 3.167 4.167V18.5z"/>
-                  </svg>
-                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor" style="cursor: pointer;">
-                    <path d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.387.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61-.546-1.387-1.333-1.757-1.333-1.757-1.089-.744.083-.729.083-.729 1.205.084 1.84 1.237 1.84 1.237 1.07 1.835 2.807 1.305 3.492.998.108-.775.418-1.305.76-1.605-2.665-.3-5.466-1.334-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23a11.45 11.45 0 0 1 3-.405c1.02.004 2.045.137 3 .405 2.28-1.553 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.435.37.81 1.102.81 2.22 0 1.606-.015 2.897-.015 3.292 0 .315.21.694.825.577C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"/>
-                  </svg>                                                                                          
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor"
+                    style="cursor: pointer;">
+                    <path
+                        d="M22.676 0H1.324C.593 0 0 .593 0 1.324v21.352C0 23.407.593 24 1.324 24h11.495v-9.294h-3.128v-3.622h3.128V8.411c0-3.1 1.892-4.787 4.659-4.787 1.324 0 2.462.098 2.795.142v3.239h-1.917c-1.504 0-1.794.714-1.794 1.761v2.311h3.587l-.467 3.622h-3.12V24h6.117c.73 0 1.324-.593 1.324-1.324V1.324C24 .593 23.406 0 22.676 0z" />
+                </svg>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor"
+                    style="cursor: pointer;">
+                    <path
+                        d="M12 2.163c3.204 0 3.584.012 4.85.07 1.366.062 2.633.315 3.608 1.29.975.975 1.228 2.242 1.29 3.608.058 1.266.07 1.646.07 4.85s-.012 3.584-.07 4.85c-.062 1.366-.315 2.633-1.29 3.608-.975.975-2.242 1.228-3.608 1.29-1.266.058-1.646.07-4.85.07s-3.584-.012-4.85-.07c-1.366-.062-2.633-.315-3.608-1.29-.975-.975-1.228-2.242-1.29-3.608C2.175 15.584 2.163 15.204 2.163 12s.012-3.584.07-4.85c.062-1.366.315-2.633 1.29-3.608.975-.975 2.242-1.228 3.608-1.29C8.416 2.175 8.796 2.163 12 2.163M12 0C8.741 0 8.332.015 7.052.072 5.771.13 4.732.308 3.867.877c-.865.568-1.548 1.252-2.116 2.116C.308 4.732.13 5.771.072 7.052.015 8.332 0 8.741 0 12s.015 3.668.072 4.948c.058 1.281.236 2.32.805 3.185.568.865 1.252 1.548 2.116 2.116.865.568 1.904.746 3.185.805C8.332 23.985 8.741 24 12 24s3.668-.015 4.948-.072c1.281-.058 2.32-.236 3.185-.805.865-.568 1.548-1.252 2.116-2.116.568-.865.746-1.904.805-3.185C23.985 15.668 24 15.259 24 12s-.015-3.668-.072-4.948c-.058-1.281-.236-2.32-.805-3.185-.568-.865-1.252-1.548-2.116-2.116-.865-.568-1.904-.746-3.185-.805C15.668.015 15.259 0 12 0zm0 5.838a6.163 6.163 0 1 0 0 12.326 6.163 6.163 0 0 0 0-12.326zm0 10.163a3.999 3.999 0 1 1 0-7.998 3.999 3.999 0 0 1 0 7.998zm7.755-10.601a1.44 1.44 0 1 1-2.88 0 1.44 1.44 0 0 1 2.88 0z" />
+                </svg>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor"
+                    style="cursor: pointer;">
+                    <path
+                        d="M23.953 4.57a10.004 10.004 0 0 1-2.825.775 4.932 4.932 0 0 0 2.163-2.724 9.864 9.864 0 0 1-3.127 1.184 4.916 4.916 0 0 0-8.384 4.482 13.978 13.978 0 0 1-10.15-5.14 4.822 4.822 0 0 0-.664 2.475 4.92 4.92 0 0 0 2.188 4.1 4.903 4.903 0 0 1-2.228-.616v.06a4.927 4.927 0 0 0 3.946 4.829 4.952 4.952 0 0 1-2.224.085 4.931 4.931 0 0 0 4.604 3.417A9.867 9.867 0 0 1 1.187 20.28a13.957 13.957 0 0 0 7.548 2.212c9.142 0 14.307-7.721 14.307-14.422 0-.219-.005-.437-.014-.654A10.243 10.243 0 0 0 24 4.59a9.937 9.937 0 0 1-2.847.782 4.92 4.92 0 0 0 2.163-2.724z" />
+                </svg>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor"
+                    style="cursor: pointer;">
+                    <path
+                        d="M19.667 3H4.333C3.6 3 3 3.6 3 4.333v15.334C3 20.4 3.6 21 4.333 21h15.334C20.4 21 21 20.4 21 19.667V4.333C21 3.6 20.4 3 19.667 3zM8.5 18.5H6V9.75h2.5v8.75zm-1.25-10.042c-.802 0-1.458-.656-1.458-1.458 0-.802.656-1.458 1.458-1.458.802 0 1.458.656 1.458 1.458 0 .802-.656 1.458-1.458 1.458zM18.5 18.5h-2.5v-4.167c0-1.11-.945-2.042-2.042-2.042H12v6.25H9.5V9.75H12v1.042c.625-.9 2.012-1.875 3.333-1.875 2.25 0 3.167 1.708 3.167 4.167V18.5z" />
+                </svg>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor"
+                    style="cursor: pointer;">
+                    <path
+                        d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.387.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61-.546-1.387-1.333-1.757-1.333-1.757-1.089-.744.083-.729.083-.729 1.205.084 1.84 1.237 1.84 1.237 1.07 1.835 2.807 1.305 3.492.998.108-.775.418-1.305.76-1.605-2.665-.3-5.466-1.334-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23a11.45 11.45 0 0 1 3-.405c1.02.004 2.045.137 3 .405 2.28-1.553 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.435.37.81 1.102.81 2.22 0 1.606-.015 2.897-.015 3.292 0 .315.21.694.825.577C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12" />
+                </svg>
             </div>
         </section>
 
-        <section>
-            <h1>What I do</h1>
-            
+        <section class="my-20">
+            <div>
+                <h3 class="text-4xl font-bold text-[#FFD700] mb-10 text-center">Skills</h3>
+            </div>
+            <div class="grid md:grid-cols-2 lg:grid-cols-4 mx-auto w-fit gap-10">
+                <div class="p-8 w-56 h-72 rounded-xl bg-white shadow-xl">
+                    <img src="images/icons/js.png" alt="" class="mt-4">
+                    <h3 class="mt-4 text-lg font-bold">Vanilla JavaScript</h3>
+                </div>
+                <div class="p-8 w-52 h-72 rounded-xl bg-white shadow-xl">
+                    <img src="images/icons/react.png" alt="" class="mt-4">
+                    <h3 class="mt-4 text-lg font-bold">React</h3>
+                </div>
+                <div class="p-8 w-52 h-72 rounded-xl bg-white shadow-xl">
+                    <img src="images/icons/nodejs.png" alt="" class="mt-4">
+                    <h3 class="mt-4 text-lg font-bold">Node.js</h3>
+                </div>
+                <div class="p-8 w-52 h-72 rounded-xl bg-white shadow-xl">
+                    <img src="images/icons/mongo.png" alt="" class="mt-4">
+                    <h3 class="mt-4 text-lg font-bold">MongoDB</h3>
+                </div>
+            </div>
+        </section>
+
+        <section class="w-10/12 mx-auto py-12">
+            <h3 class="text-4xl text-center font-bold text-[#FFD700] mb-4">A summary of My Resume</h3>
+            <div class="flex mx-auto gap-24 mt-16">
+                <div>
+                    <h3 class="text-[#474747] text-2xl font-bold my-4">My Education</h3>
+                    <div class="my-6">
+                        <h3 class="text-[#474747] text-xl font-bold my-4">Master in Computer Engineering</h3>
+                        <p class="text-[#757575] font-semibold my-4">Harvard University / 2015 - 2017</p>
+                        <p class="max-w-[360px] text-[#757575] font-light my-4">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <hr>
+                    <div class="my-6">
+                        <h3 class="degree">Master in Computer Engineering</h3>
+                        <p class="institute">Harvard University / 2015 - 2017</p>
+                        <p class="description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <hr>
+                    <div class="my-6">
+                        <h3 class="degree">Master in Computer Engineering</h3>
+                        <p class="institute">Harvard University / 2015 - 2017</p>
+                        <p class="description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                </div>
+                <div class="experience">
+                    <h3 class="text-[#474747] text-2xl font-bold">My Experience</h3>
+                    <div class="information">
+                        <h3 class="degree">Sr. Font End Developer</h3>
+                        <p class="institute">Apple Inc / 2020 - Current</p>
+                        <p class="description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <hr>
+                    <div class="information">
+                        <h3 class="degree">Sr. Font End Developer</h3>
+                        <p class="institute">Apple Inc / 2020 - Current</p>
+                        <p class="description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <hr>
+                    <div class="information">
+                        <h3 class="degree">Sr. Font End Developer</h3>
+                        <p class="institute">Apple Inc / 2020 - Current</p>
+                        <p class="description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <button class="p-3 font-semibold">Download Resume</button>
+            </div>
         </section>
     </main>
 
