updated banner section

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </header>
 
     <main>
-       <section class="banner-container min-h-screen p-1  lg:w-full" id="banner-container">
+       <section class="banner-container w-h-screen p-1  lg:w-full" id="banner-container">
             <div class="grid grid-cols-1 lg:grid-cols-2">
                 <div class="mx-auto my-auto">
                     <span class="text-2xl md:text-3xl font-semibold mb-0">Hi I am</span>
